Set appbar background color and box-shadow

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,3 +1,4 @@
+// colors
 $primary-color: #1565c0;
 $primary-light-color: #5e92f3;
 $primary-dark-color: #003c8f;
@@ -12,3 +13,5 @@ $on-background-color: #000000;
 $on-surface-color: #000000;
 $error-color: #ff0000;
 $on-error-color: #ffffff;
+
+// spacing
