import all scss files to main file

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,2 +1,25 @@
+@use "./abstracts/variables";
+@use "./abstracts/functions";
+@use "./abstracts/mixins";
+
+@use "./vendors/bootstrap";
+
+@use "./base/reset";
+@use "./base/typography";
+
 @use "./layout/body";
+@use "./layout/navigation";
+@use "./layout/grid";
 @use "./layout/header";
+@use "./layout/footer";
+@use "./layout/sidebar";
+@use "./layout/forms";
+
+@use "./components/buttons";
+@use "./components/carousel";
+@use "./components/slider";
+
+@use "./pages/home";
+
+@use "./themes/theme";
+@use "./themes/admin";
