--- a/sass/layout/_body.scss
+++ b/sass/layout/_body.scss
@@ -1,3 +1,5 @@
+@use "../base/typography";
+
 *,
 *::before,
 *::after {
@@ -8,10 +10,12 @@ html {
   width: 100%;
   margin: 0;
   padding: 0;
+  font: typography.$base-font;
 }
 
 body {
   width: 100%;
   margin: 0;
   padding: 0;
+  font-size: 1rem;
 }
