--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -5,15 +5,31 @@
 .appbar {
   width: 100%;
   height: 56px;
-
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
   background-color: variables.$primary-color;
-
   z-index: 4;
   // add box-shadow
   @include mixins.appbar-shadow;
+
+  // flex
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
 }
 
 // logo
 .logo {
+  display: block;
+  width: 3rem;
+  height: 3rem;
+  border-radius: 50%;
+  text-decoration: none;
   background-color: variables.$secondary-color;
+
+  // logo image
+  &__img {
+    width: 100%;
+    height: 100%;
+  }
 }
