--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -1,1 +1,11 @@
+@use "../abstracts/functions";
+
 $base-font: 16px Helvetica, sans-serif;
+$body-font-size: functions.pxToRem(16px);
+$headline-font-size: functions.pxToRem(24px);
+$subheadline-font-size: functions.pxToRem(16px);
+
+// colors
+$text-high-color: rgba(#000000, 0.87);
+$text-medium-color: rgba(#000000, 0.6);
+$text-low-color: rgba(#000000, 0.5);
