--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -1,19 +1,18 @@
 @use "../abstracts/variables";
-@use "../abstracts/functions";
 @use "../abstracts/mixins";
 
 %btn {
-  min-width: functions.pxToRem(64px);
-  height: functions.pxToRem(36px);
+  min-width: 4rem;
+  height: 2.25rem;
   border: none;
-  border-radius: functions.pxToRem(4px);
+  border-radius: 0.25rem;
   background-color: variables.$secondary-color;
   color: variables.$on-secondary-color;
 
-  font-size: functions.pxToRem(16px);
+  font-size: 1rem;
   text-transform: uppercase;
-  padding-left: functions.pxToRem(16px);
-  padding-right: functions.pxToRem(16px);
+  padding-left: 1rem;
+  padding-right: 1rem;
 
   // box-shadow
   @include mixins.btn-shadow;
