--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -10,7 +10,8 @@ html {
   width: 100%;
   margin: 0;
   padding: 0;
-  font: typography.$base-font;
+  font-family: typography.$base-font;
+  font-size: typography.$base-font-size;
 }
 
 body {
@@ -22,7 +23,7 @@ body {
 
 .headline {
   font-size: typography.$headline-font-size;
-  font-weight: 500;
+  font-weight: 700;
   color: typography.$text-high-color;
   text-align: center;
   margin-top: 0;
@@ -30,7 +31,7 @@ body {
 
 .subheadline {
   font-size: typography.$subheadline-font-size;
-  font-weight: 500;
+  font-weight: 600;
   color: typography.$text-medium-color;
 }
 
