--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -1,5 +1,6 @@
 // font sizes
-$base-font: 16px Helvetica, sans-serif;
+$base-font: "Nunito", sans-serif;
+$base-font-size: 16px;
 $body-font-size: 1rem;
 $headline-font-size: 1.5rem;
 $subheadline-font-size: 1rem;
