Update app theme

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,8 +1,8 @@
 // colors
-$primary-color: #1565c0;
+$primary-color: #003049;
 $primary-light-color: #5e92f3;
 $primary-dark-color: #003c8f;
-$secondary-color: #dd2c00;
+$secondary-color: #ef233c;
 $secondary-light-color: #ff6434;
 $secondary-dark-color: #a30000;
 $on-primary-color: #ffffff;
@@ -11,7 +11,7 @@ $background-color: #ffffff;
 $surface-color: #ffffff;
 $on-background-color: #000000;
 $on-surface-color: #000000;
-$error-color: #ff0000;
+$error-color: #d90429;
 $on-error-color: #ffffff;
 
 // spacing
