--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -3,6 +3,9 @@
 }
 
 @mixin btn-shadow {
-  box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2),
-    0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 1px 5px 0px rgba(0, 0, 0, 0.12);
+  box-shadow: 1px 4px 18px 0px rgba(0, 0, 0, 0.23);
+}
+
+@mixin btn-hover-shadow {
+  box-shadow: 1px 4px 18px 4px rgba(0, 0, 0, 0.23);
 }
