Add app background color

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -7,7 +7,7 @@ $secondary-light-color: #ff6434;
 $secondary-dark-color: #a30000;
 $on-primary-color: #ffffff;
 $on-secondary-color: #ffffff;
-$background-color: #ffffff;
+$background-color: #f0f0f0;
 $surface-color: #ffffff;
 $on-background-color: #000000;
 $on-surface-color: #000000;
