--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -1,3 +1,4 @@
+@use "../abstracts/variables";
 @use "./typography";
 
 *,
@@ -19,6 +20,7 @@ body {
   margin: 0;
   padding: 0;
   font-size: typography.$body-font-size;
+  background-color: variables.$background-color;
 }
 
 .headline {
