--- a/sass/pages/_login.scss
+++ b/sass/pages/_login.scss
@@ -11,20 +11,26 @@
   &__form {
     width: 100%;
     padding: 1rem;
-    margin-top: 2rem;
-    margin-bottom: 2rem;
+    margin-top: 1.5rem;
+    margin-bottom: 1.5rem;
   }
 
   // login-content__hero
   &__hero {
     width: 100%;
     padding: 1rem;
-    display: none;
+  }
+}
+
+.login-hero {
+  display: none;
+  &__img {
   }
 }
 
 .goto-auth {
   text-align: center;
+  margin-bottom: 2rem;
   &__link {
     color: variables.$secondary-color;
     font-weight: 700;
