set focus border width to for input

--- a/sass/layout/_forms.scss
+++ b/sass/layout/_forms.scss
@@ -29,5 +29,9 @@
     height: 3rem;
     border: 3px solid variables.$primary-color;
     border-radius: 0.25rem;
+
+    &:focus {
+      border-width: 4px;
+    }
   }
 }
