--- a/sass/layout/_forms.scss
+++ b/sass/layout/_forms.scss
@@ -7,6 +7,7 @@
   background-color: variables.$surface-color;
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
+  border-radius: 0.25rem;
 
   // box-shadow
   @include mixins.surface-shadow;
