--- a/sass/main.scss
+++ b/sass/main.scss
@@ -24,6 +24,7 @@
 @use "./pages/home";
 @use "./pages/login";
 @use "./pages/register";
+@use "./pages/profile";
 
 @use "./themes/theme";
 @use "./themes/admin";
