--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,5 +1,6 @@
 @use "../abstracts/variables";
 @use "../abstracts/mixins";
+@use "../base/typography";
 
 // appbar
 .appbar {
@@ -16,6 +17,10 @@
   display: flex;
   justify-content: flex-start;
   align-items: center;
+
+  &--space-between {
+    justify-content: space-between;
+  }
 }
 
 // logo
@@ -31,5 +36,69 @@
   &__img {
     width: 100%;
     height: 100%;
+  }
+}
+
+.profile-dropdown {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  position: relative;
+
+  &:hover {
+    .profile-dropdown__content {
+      display: block;
+    }
+  }
+
+  //profile-dropdown__img-wrapper
+  &__img-wrapper {
+    width: 2.5rem;
+    height: 2.5rem;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    overflow: hidden;
+  }
+
+  // profile-dropdown__img
+  &__img {
+    width: 100%;
+    height: 100%;
+    cursor: pointer;
+  }
+
+  // profile-dropdown__content
+  &__content {
+    display: none;
+    background-color: variables.$surface-color;
+    position: absolute;
+    top: 1.75rem;
+    right: 0;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+    border-radius: 0.25rem;
+    // box-shadow
+    @include mixins.surface-shadow;
+  }
+
+  // profile-dropdown__link
+  &__link {
+    width: 100%;
+    height: 2.5rem;
+    text-decoration: none;
+    font-weight: 500;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    color: typography.$text-high-color;
+    transition: background-color 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
+
+    &:hover {
+      background-color: rgba($color: variables.$on-surface-color, $alpha: 0.04);
+    }
   }
 }
