--- a/sass/layout/_forms.scss
+++ b/sass/layout/_forms.scss
@@ -30,6 +30,7 @@
     height: 3rem;
     border: 3px solid variables.$primary-color;
     border-radius: 0.25rem;
+    padding-left: 0.5rem;
 
     &:focus {
       border-width: 4px;
