--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -2,7 +2,6 @@
 @use "../abstracts/mixins";
 
 .btn {
-  min-width: 4rem;
   height: 2.25rem;
   border: none;
   border-radius: 0.25rem;
@@ -13,6 +12,9 @@
   text-transform: uppercase;
   padding-left: 1rem;
   padding-right: 1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   cursor: pointer;
   transition: box-shadow 0.5s cubic-bezier(0.075, 0.82, 0.165, 1);
 
@@ -29,6 +31,42 @@
 
   &:focus {
     @include mixins.btn-hover-shadow;
+  }
+
+  // btn--36px
+  &--36 {
+    width: 2.25rem;
+    height: 2.25rem;
+    padding: 0;
+  }
+
+  // btn--40px
+  &--40 {
+    width: 2.5rem;
+    height: 2.5rem;
+    padding: 0;
+  }
+
+  // btn--48px
+  &--48 {
+    width: 3rem;
+    height: 3rem;
+    padding: 0;
+  }
+
+  // btn--search
+  &--search {
+    width: 3rem;
+    height: 3rem;
+    padding: 0;
+    border-radius: 0 0.25rem 0.25rem 0;
+  }
+
+  //btn__icon
+  &__icon {
+    width: 24px;
+    height: 24px;
+    fill: variables.$on-primary-color;
   }
 }
 
