--- a/sass/layout/_forms.scss
+++ b/sass/layout/_forms.scss
@@ -37,3 +37,22 @@
     }
   }
 }
+
+.seach-form {
+  display: flex;
+  margin: 0;
+  padding: 0;
+  // seach-form__input-control
+  &__input-control {
+    width: 100%;
+    height: 3rem;
+    border: 3px solid variables.$primary-color;
+    border-radius: 0.25rem 0 0 0.25rem;
+    padding-left: 0.5rem;
+
+    &:focus {
+      border-width: 4px;
+    }
+  }
+  // seach-form__submit-btn
+}
