--- a/sass/main.scss
+++ b/sass/main.scss
@@ -25,6 +25,7 @@
 @use "./pages/login";
 @use "./pages/register";
 @use "./pages/profile";
+@use "./pages/friendslist";
 
 @use "./themes/theme";
 @use "./themes/admin";
