--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -62,6 +62,12 @@
     border-radius: 0 0.25rem 0.25rem 0;
   }
 
+  // btn--outline
+  &--rounded {
+    padding: 0;
+    border-radius: 50%;
+  }
+
   //btn__icon
   &__icon {
     width: 24px;
