--- a/sass/main.scss
+++ b/sass/main.scss
@@ -20,6 +20,7 @@
 @use "./components/buttons";
 @use "./components/carousel";
 @use "./components/slider";
+@use "./components/friends";
 
 @use "./pages/home";
 @use "./pages/login";
