Reduce appbar paddings

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,17 +1,15 @@
 // colors
 $primary-color: #003049;
-$primary-light-color: #5e92f3;
-$primary-dark-color: #003c8f;
 $secondary-color: #ef233c;
-$secondary-light-color: #ff6434;
-$secondary-dark-color: #a30000;
-$on-primary-color: #ffffff;
-$on-secondary-color: #ffffff;
 $background-color: #f0f0f0;
 $surface-color: #ffffff;
+$error-color: #d90429;
+
+// text colors
+$on-primary-color: #ffffff;
+$on-secondary-color: #ffffff;
 $on-background-color: #000000;
 $on-surface-color: #000000;
-$error-color: #d90429;
 $on-error-color: #ffffff;
 
 // spacing
