Design right message item

--- a/sass/components/messages.scss
+++ b/sass/components/messages.scss
@@ -49,7 +49,7 @@
     &::before {
       content: "";
       position: absolute;
-      top: 0.125;
+      top: 0.125rem;
       left: -1.5rem;
       width: 0;
       height: 0;
@@ -64,5 +64,25 @@
   &__text {
     margin: 0;
     padding: 0;
+  }
+
+  // message--right
+  &--right {
+    flex-direction: row-reverse;
+
+    & .message__message-buble {
+      margin-left: 0;
+      margin-right: 1rem;
+      background-color: #dfdfdf;
+      color: #000000;
+
+      &::before {
+        left: calc(100% - 0.5rem);
+        border-top: 1rem solid transparent;
+        border-bottom: 1rem solid transparent;
+        border-left: 1rem solid #dfdfdf;
+        border-right: 1rem solid transparent;
+      }
+    }
   }
 }
