--- a/sass/layout/_forms.scss
+++ b/sass/layout/_forms.scss
@@ -56,3 +56,29 @@
   }
   // seach-form__submit-btn
 }
+
+// chat-from
+.chat-form {
+  display: flex;
+  margin: 0;
+  padding: 0.5rem;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: variables.$surface-color;
+  @include mixins.bottom-shadow;
+
+  // chat-form__input-control
+  &__input-control {
+    width: 100%;
+    height: 3rem;
+    border: 3px solid variables.$primary-color;
+    border-radius: 0.25rem 0 0 0.25rem;
+    padding-left: 0.5rem;
+  }
+
+  // chat-form__submit-btn
+  &__submit-btn {
+  }
+}
