--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -9,6 +9,7 @@
   padding-left: 1rem;
   padding-right: 1rem;
   background-color: variables.$primary-color;
+  position: relative;
   z-index: 4;
   // add box-shadow
   @include mixins.appbar-shadow;
