--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -10,6 +10,7 @@
   font-size: 1rem;
   font-weight: 600;
   text-transform: uppercase;
+  text-decoration: none;
   padding-left: 1rem;
   padding-right: 1rem;
   display: flex;
