--- a/sass/main.scss
+++ b/sass/main.scss
@@ -22,6 +22,7 @@
 @use "./components/slider";
 @use "./components/friends";
 @use "./components/messages.scss";
+@use "./components/chat-friends";
 
 @use "./pages/home";
 @use "./pages/login";
