--- a/sass/components/_chat-friends.scss
+++ b/sass/components/_chat-friends.scss
@@ -4,14 +4,14 @@
 // chat-friends
 .chat-friends {
   width: 100%;
-  padding: 1rem 0;
+  padding: 1rem;
   background-color: variables.$surface-color;
 }
 
 // chat-friends-list
 .chat-friends-list {
   width: 100%;
-  padding: 0.5rem 1rem;
+  padding: 0.5rem 0;
   display: grid;
   grid-template-columns: 100%;
   row-gap: 0.125rem;
@@ -23,12 +23,13 @@
   display: flex;
   align-items: center;
   padding-left: 0.5rem;
-  border-radius: 0.5rem;
+  border-radius: 0.25rem;
 
   &:hover {
     background-color: rgba($color: variables.$primary-color, $alpha: 0.04);
   }
 
+  // chat-friend--active
   &--active {
     background-color: rgba($color: variables.$primary-color, $alpha: 0.12);
   }
@@ -40,7 +41,7 @@
     position: relative;
   }
 
-  // chat-friend__avatar
+  // chat-friend__avatar-wrapper
   &__avatar-wrapper {
     width: 2.5rem;
     height: 2.5rem;
@@ -51,7 +52,7 @@
     align-items: center;
   }
 
-  // chat-friend__img
+  // chat-friend__avatar
   &__avatar {
     width: 100%;
     height: 100%;
