--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -1,3 +1,6 @@
+@use "sass:map";
+@use "./variables";
+
 @mixin appbar-shadow {
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
 }
@@ -20,4 +23,8 @@
   box-shadow: 0 0px 2.2px rgba(0, 0, 0, 0.028), 0 0px 5.3px rgba(0, 0, 0, 0.04),
     0 0px 10px rgba(0, 0, 0, 0.05), 0 0px 17.9px rgba(0, 0, 0, 0.06),
     0 0px 33.4px rgba(0, 0, 0, 0.072), 0 0px 80px rgba(0, 0, 0, 0.1);
+}
+
+@mixin z-index($elevation) {
+  z-index: map.get(variables.$elevations, $elevation);
 }
