--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -46,3 +46,11 @@ body {
   color: typography.$text-low-color;
   margin: 0.5rem 0;
 }
+
+.scrim {
+  width: 100%;
+  height: calc(100%);
+  position: absolute;
+  background-color: rgba($color: #000000, $alpha: 0.1);
+  z-index: 12;
+}
