--- a/sass/components/_chat-friends.scss
+++ b/sass/components/_chat-friends.scss
@@ -4,6 +4,7 @@
 // chat-friends
 .chat-friends {
   width: 100%;
+  height: 100%;
   padding: 1rem;
   background-color: variables.$surface-color;
 }
@@ -24,6 +25,7 @@
   align-items: center;
   padding-left: 0.5rem;
   border-radius: 0.25rem;
+  cursor: pointer;
 
   &:hover {
     background-color: rgba($color: variables.$primary-color, $alpha: 0.04);
@@ -67,8 +69,10 @@
     position: absolute;
     top: 0;
     right: 0;
-    z-index: 2;
     background-color: #29d612;
+
+    // z-index
+    @include mixins.z-index("status");
   }
 
   // chat-friend__name
