--- a/sass/layout/_forms.scss
+++ b/sass/layout/_forms.scss
@@ -69,6 +69,9 @@
   background-color: variables.$surface-color;
   @include mixins.bottom-shadow;
 
+  // z-index
+  @include mixins.z-index("bottom-bar");
+
   // chat-form__input-control
   &__input-control {
     width: 100%;
