--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -51,6 +51,12 @@ body {
   width: 100%;
   height: calc(100%);
   position: absolute;
-  background-color: rgba($color: #000000, $alpha: 0.1);
+  background-color: rgba($color: #000000, $alpha: 0);
+  pointer-events: none;
   z-index: 12;
+
+  // scrim--active
+  &--active {
+    background-color: rgba($color: #000000, $alpha: 0.1);
+  }
 }
