--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -24,6 +24,67 @@
   &--space-between {
     justify-content: space-between;
   }
+
+  // appbar__section
+  &__section {
+    margin: 0;
+    padding: 0;
+
+    // appbar__section--margin
+    &--margin {
+      margin-left: 1rem;
+    }
+
+    // appbar__section--right
+    &--right {
+      margin-left: auto;
+    }
+  }
+
+  // appbar__menu
+  &__menu {
+    width: 2.5rem;
+    height: 2.5rem;
+    margin: 0;
+    padding: 0;
+    background-color: variables.$primary-color;
+    border: none;
+    border-radius: 0.25rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+  }
+
+  // appbar__icon
+  &__icon {
+    width: 1.5rem;
+    height: 1.5rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+  }
+
+  // appbar__bar
+  &__bar {
+    display: block;
+    width: 100%;
+    height: 0.25rem;
+    background-color: variables.$on-primary-color;
+
+    // appbar__bar--top
+    &--top {
+    }
+
+    // appbar__bar--middle
+    &--middle {
+    }
+
+    // appbar__bar--bottom
+    &--bottom {
+    }
+  }
 }
 
 // logo
