--- a/sass/pages/_friendslist-page.scss
+++ b/sass/pages/_friendslist-page.scss
@@ -1,5 +1,24 @@
 @use "../abstracts/variables";
 
+// friendslist-page
+.friendslist-page {
+  // friendslist-page__body
+  &__body {
+  }
+
+  // friendslist-page__header
+  &__header {
+  }
+
+  // friendslist-page__main
+  &__main {
+  }
+
+  // friendslist-page__footer
+  &__footer {
+  }
+}
+
 .friendslist-content {
   width: 100%;
   margin: 0;
