--- a/sass/pages/_home-page.scss
+++ b/sass/pages/_home-page.scss
@@ -1,3 +1,22 @@
+// home-page
+.home-page {
+  // home-page__body
+  &__body {
+  }
+
+  // home-page__header
+  &__header {
+  }
+
+  // home-page__main
+  &__main {
+  }
+
+  // home-page__footer
+  &__footer {
+  }
+}
+
 // home-content
 .home-content {
   width: 100%;
