--- a/sass/pages/_login-page.scss
+++ b/sass/pages/_login-page.scss
@@ -1,13 +1,32 @@
 @use "../abstracts/variables";
 
-.register-content {
+// login-page
+.login-page {
+  // login-page__body
+  &__body {
+  }
+
+  // login-page__header
+  &__header {
+  }
+
+  // login-page__main
+  &__main {
+  }
+
+  // login-page__footer
+  &__footer {
+  }
+}
+
+.login-content {
   width: 100%;
   margin: 0;
   padding: 0;
   display: flex;
   flex-direction: column;
 
-  // register-content__form
+  // login-content__form
   &__form {
     width: 100%;
     padding: 1rem;
@@ -15,14 +34,14 @@
     margin-bottom: 1.5rem;
   }
 
-  // register-content__hero
+  // login-content__hero
   &__hero {
     width: 100%;
     padding: 1rem;
   }
 }
 
-.register-hero {
+.login-hero {
   display: none;
   &__img {
   }
