--- a/sass/pages/_login-page.scss
+++ b/sass/pages/_login-page.scss
@@ -2,8 +2,15 @@
 
 // login-page
 .login-page {
+  width: 100%;
+  height: 100%;
   // login-page__body
   &__body {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
   }
 
   // login-page__header
