--- a/sass/pages/_home-page.scss
+++ b/sass/pages/_home-page.scss
@@ -1,7 +1,14 @@
 // home-page
 .home-page {
+  width: 100%;
+  height: 100%;
   // home-page__body
   &__body {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
   }
 
   // home-page__header
@@ -36,7 +43,7 @@
     padding: 1rem;
   }
 }
-.hero {
+.home-hero {
   width: 100%;
   height: 100%;
   display: flex;
@@ -44,7 +51,7 @@
   align-items: center;
 
   &__img {
-    width: 75%;
-    height: 50%;
+    width: 12rem;
+    height: 12rem;
   }
 }
