--- a/sass/pages/_home-page.scss
+++ b/sass/pages/_home-page.scss
@@ -8,11 +8,11 @@
     height: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
   }
 
   // home-page__header
   &__header {
+    flex-shrink: 0;
   }
 
   // home-page__main
@@ -21,6 +21,7 @@
 
   // home-page__footer
   &__footer {
+    margin-top: auto;
   }
 }
 
