--- a/sass/pages/_login-page.scss
+++ b/sass/pages/_login-page.scss
@@ -10,11 +10,11 @@
     height: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
   }
 
   // login-page__header
   &__header {
+    flex-shrink: 0;
   }
 
   // login-page__main
@@ -23,6 +23,7 @@
 
   // login-page__footer
   &__footer {
+    margin-top: auto;
   }
 }
 
