--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -20,3 +20,13 @@ $elevations: (
   bottom-bar: 4,
   drawer: 16,
 );
+
+// breakpoints
+$breakpoints: (
+  tablet: 600px,
+  large-tablet: 720px,
+  xlarge-tablet: 840px,
+  small-desktop: 960px,
+  desktop: 1024px,
+  large-desktop: 1280px,
+);
