reorganize home page

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -23,6 +23,7 @@
 @use "./components/friends";
 @use "./components/messages.scss";
 @use "./components/chat-friends";
+@use "./components/hero";
 
 @use "./pages/home-page";
 @use "./pages/login-page";
