--- a/sass/pages/_home-page.scss
+++ b/sass/pages/_home-page.scss
@@ -17,42 +17,36 @@
 
   // home-page__main
   &__main {
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column-reverse;
   }
 
-  // home-page__footer
-  &__footer {
-    margin-top: auto;
-  }
-}
-
-// home-content
-.home-content {
-  width: 100%;
-  margin: 0;
-  padding: 0;
-  display: flex;
-  flex-direction: column-reverse;
-
-  // home-content__copy
+  // home-page__copy
   &__copy {
     width: 100%;
     padding: 1rem;
   }
 
-  &__hero {
+  // home-page__btn-wrapper
+  &__btn-wrapper {
+    justify-content: center;
+  }
+
+  // home-page__hero-wrapper
+  &__hero-wrapper {
     width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     padding: 1rem;
   }
-}
-.home-hero {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
 
-  &__img {
-    width: 12rem;
-    height: 12rem;
+  // home-page__footer
+  &__footer {
+    margin-top: auto;
   }
 }
