--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -47,6 +47,18 @@ body {
   margin: 0.5rem 0;
 }
 
+// goto-auth
+.goto-auth {
+  text-align: center;
+  margin-bottom: 2rem;
+
+  // goto-auth__link
+  &__link {
+    color: variables.$secondary-color;
+    font-weight: 700;
+  }
+}
+
 .scrim {
   width: 100%;
   height: calc(100%);
