--- a/sass/pages/_login-page.scss
+++ b/sass/pages/_login-page.scss
@@ -19,22 +19,14 @@
 
   // login-page__main
   &__main {
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
   }
 
-  // login-page__footer
-  &__footer {
-    margin-top: auto;
-  }
-}
-
-.login-content {
-  width: 100%;
-  margin: 0;
-  padding: 0;
-  display: flex;
-  flex-direction: column;
-
-  // login-content__form
+  // login-page__form
   &__form {
     width: 100%;
     padding: 1rem;
@@ -42,24 +34,22 @@
     margin-bottom: 1.5rem;
   }
 
-  // login-content__hero
-  &__hero {
+  // login-page__hero-wrapper
+  &__hero-wrapper {
     width: 100%;
     padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
-}
 
-.login-hero {
-  display: none;
-  &__img {
+  // login-page__hero
+  &__hero {
+    display: none;
   }
-}
 
-.goto-auth {
-  text-align: center;
-  margin-bottom: 2rem;
-  &__link {
-    color: variables.$secondary-color;
-    font-weight: 700;
+  // login-page__footer
+  &__footer {
+    margin-top: auto;
   }
 }
