Center login button

--- a/sass/pages/_login-page.scss
+++ b/sass/pages/_login-page.scss
@@ -34,6 +34,11 @@
     margin-bottom: 1.5rem;
   }
 
+  // login-page__btn-wrapper
+  &__btn-wrapper {
+    justify-content: center;
+  }
+
   // login-page__hero-wrapper
   &__hero-wrapper {
     width: 100%;
