Design home page for tablet

--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -1,4 +1,12 @@
+@use "../abstracts/mixins";
+
 .hero {
   width: 12rem;
   height: 12rem;
+
+  // tablet
+  @include mixins.tablet {
+    width: 14rem;
+    height: 14rem;
+  }
 }
