--- a/sass/pages/_home-page.scss
+++ b/sass/pages/_home-page.scss
@@ -1,3 +1,5 @@
+@use "../abstracts/mixins";
+
 // home-page
 .home-page {
   width: 100%;
@@ -28,6 +30,11 @@
   &__copy {
     width: 100%;
     padding: 1rem;
+
+    // tablet
+    @include mixins.tablet {
+      padding: 1rem 3rem;
+    }
   }
 
   // home-page__btn-wrapper
