--- a/sass/pages/_home-page.scss
+++ b/sass/pages/_home-page.scss
@@ -24,6 +24,12 @@
     padding: 0;
     display: flex;
     flex-direction: column-reverse;
+
+    // large tablet
+    @include mixins.large-tablet {
+      flex-direction: row;
+      flex-grow: 1;
+    }
   }
 
   // home-page__copy
@@ -35,11 +41,24 @@
     @include mixins.tablet {
       padding: 1rem 3rem;
     }
+
+    // large tablet
+    @include mixins.large-tablet {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: flex-start;
+    }
   }
 
   // home-page__btn-wrapper
   &__btn-wrapper {
     justify-content: center;
+
+    // large tablet
+    @include mixins.large-tablet {
+      justify-content: flex-start;
+    }
   }
 
   // home-page__hero-wrapper
