Design login page for all devices

--- a/sass/pages/_login-page.scss
+++ b/sass/pages/_login-page.scss
@@ -31,6 +31,24 @@
       flex-direction: row;
       flex-grow: 1;
     }
+
+    // extra large tablet
+    @include mixins.xlarge-tablet {
+      padding-left: 2rem;
+      padding-right: 2rem;
+    }
+
+    // small-desktop
+    @include mixins.small-desktop {
+      padding-left: 5%;
+      padding-right: 5%;
+    }
+
+    // desktop
+    @include mixins.desktop {
+      padding-left: 8%;
+      padding-right: 8%;
+    }
   }
 
   // login-page__form
@@ -47,11 +65,27 @@
       justify-content: center;
       margin-top: 0;
     }
+
+    // small-desktop
+    @include mixins.small-desktop {
+      padding-left: 6%;
+    }
+
+    // desktop
+    @include mixins.desktop {
+      padding-left: 8%;
+      padding-right: 8%;
+    }
   }
 
   // login-page__btn-wrapper
   &__btn-wrapper {
     justify-content: center;
+
+    // tablet
+    @include mixins.tablet {
+      justify-content: flex-start;
+    }
   }
 
   // login-page__hero-wrapper
