--- a/sass/pages/_profile-page.scss
+++ b/sass/pages/_profile-page.scss
@@ -31,6 +31,24 @@
       flex-direction: row;
       flex-grow: 1;
     }
+
+    // extra large tablet
+    @include mixins.xlarge-tablet {
+      padding-left: 2rem;
+      padding-right: 2rem;
+    }
+
+    // small-desktop
+    @include mixins.small-desktop {
+      padding-left: 5%;
+      padding-right: 5%;
+    }
+
+    // desktop
+    @include mixins.desktop {
+      padding-left: 8%;
+      padding-right: 8%;
+    }
   }
 
   // profile-page__form
@@ -44,6 +62,17 @@
       display: flex;
       flex-direction: column;
       justify-content: center;
+    }
+
+    // small-desktop
+    @include mixins.small-desktop {
+      padding-left: 6%;
+    }
+
+    // desktop
+    @include mixins.desktop {
+      padding-left: 8%;
+      padding-right: 8%;
     }
   }
 
