--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -62,6 +62,7 @@ body {
   text-transform: uppercase;
   color: typography.$text-low-color;
   margin: 0.5rem 0;
+  font-size: 1.125rem;
 }
 
 // goto-auth
