--- a/sass/pages/_home-page.scss
+++ b/sass/pages/_home-page.scss
@@ -15,12 +15,16 @@
   // home-page__header
   &__header {
     flex-shrink: 0;
+    position: fixed;
+    top: 0;
+    // z-index
+    @include mixins.z-index("appbar");
   }
 
   // home-page__main
   &__main {
     width: 100%;
-    margin: 0;
+    margin: 3.5rem 0 0;
     padding: 0;
     display: flex;
     flex-direction: column-reverse;
