--- a/sass/pages/_login-page.scss
+++ b/sass/pages/_login-page.scss
@@ -16,12 +16,16 @@
   // login-page__header
   &__header {
     flex-shrink: 0;
+    position: fixed;
+    top: 0;
+    // z-index
+    @include mixins.z-index("appbar");
   }
 
   // login-page__main
   &__main {
     width: 100%;
-    margin: 0;
+    margin: 3.5rem 0 0;
     padding: 0;
     display: flex;
     flex-direction: column;
