Redesign chat friends list

--- a/sass/pages/chat-page.scss
+++ b/sass/pages/chat-page.scss
@@ -17,10 +17,12 @@
     height: 100%;
     display: flex;
     flex-direction: column;
+    align-items: center;
 
     // large-tablet
     @include mixins.large-tablet {
       height: 100%;
+      justify-content: space-between;
     }
   }
 
@@ -31,6 +33,13 @@
     top: 0;
     // z-index
     @include mixins.z-index("appbar");
+
+    // large-tablet
+    @include mixins.large-tablet {
+      position: static;
+      // z-index
+      @include mixins.z-index("no-elevation");
+    }
   }
 
   // chat-page__main
@@ -44,7 +53,15 @@
     flex-grow: 1;
     // large-tablet
     @include mixins.large-tablet {
+      width: 90%;
+      height: calc(100% - 9.5rem);
       flex-direction: row-reverse;
+      margin: 0;
+    }
+
+    // xlarge-tablet
+    @include mixins.xlarge-tablet {
+      width: 85%;
     }
   }
 
@@ -61,6 +78,8 @@
     @include mixins.large-tablet {
       width: 65%;
       padding: 1rem;
+      display: flex;
+      flex-direction: column;
     }
   }
 
@@ -69,6 +88,27 @@
     width: 100%;
     height: 100%;
     padding-bottom: 64px;
+
+    background-color: variables.$surface-color;
+    @include mixins.surface-shadow;
+
+    // large-tablet
+    @include mixins.large-tablet {
+      height: 80%;
+      overflow-y: auto;
+      padding: 1rem;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+  }
+
+  // chat-page__list
+  &__list {
+    // large-tablet
+    @include mixins.large-tablet {
+      margin: auto;
+    }
   }
 
   // chat-page__chat-form
@@ -114,9 +154,36 @@
     }
   }
 
+  // chat-page__chat-friends
+  &__chat-friends {
+    width: 100%;
+    height: 100%;
+    padding: 1rem;
+    background-color: variables.$surface-color;
+    display: flex;
+    flex-direction: column;
+
+    // large-tablet
+    @include mixins.large-tablet {
+      // box-shadow
+      @include mixins.surface-shadow;
+    }
+  }
+
+  // chat-page__subtitle
+  &__subtitle {
+    flex-shrink: 0;
+  }
+
+  // chat-page__friends-list
+  &__friends-list {
+    overflow-y: auto;
+  }
+
   // chat-page__btn-wrapper
   &__btn-wrapper {
     justify-content: center;
+    flex-shrink: 0;
   }
 
   // chat-page__footer
@@ -128,7 +195,7 @@
     // large-tablet
     @include mixins.large-tablet {
       display: flex;
-      margin-top: auto;
+      margin-top: 0;
     }
   }
 }
