--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -12,6 +12,10 @@ $on-background-color: #000000;
 $on-surface-color: #000000;
 $on-error-color: #ffffff;
 
+// scrollbar colors
+$scrollbar-track-color: #f3f3f3;
+$scrollbar-handle-color: rgba(0, 0, 0, 0.377);
+
 // elevations
 $elevations: (
   no-elevation: 0,
