--- a/sass/components/_friends.scss
+++ b/sass/components/_friends.scss
@@ -31,6 +31,18 @@
   &__img {
     width: 100%;
     height: 100%;
+    background-color: variables.$secondary-color;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  // friends__img-name
+  &__img-name {
+    font-size: 1rem;
+    font-weight: 700;
+    color: #ffffff;
+    text-transform: uppercase;
   }
 
   // friends__name
